--- a/game/infiltrating-the-airship.html
+++ b/game/infiltrating-the-airship.html
@@ -4,11 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Infiltrating the Airship Unblocked: Play Now for Free on FAF Games</title>
+        <title>Infiltrating the Airship Unblocked: Play Now at 76 Unblocked Games</title>
         <meta name="description" content="
-        A fun and engaging TEAMWORK game for two players is Infiltrating The Airship. 
-        Aid Infiltrating The Airship in locating the Forest Temple's exit. 
-        Watergirl and Fireboy must stay out of the water, and be cautious since the green muck will kill them both!">
+       Join Henry Stickmin in Infiltrating the Airship, a hilarious adventure game filled with action, choices, and multiple endings. Can you complete the mission? Play now.">
         <meta name="title" content="Infiltrating The Airship, Infiltrating The Airship Unblocked">
         <meta name="keywords" content="Infiltrating The Airship Game, 
         Adventure Games, AdventureGames, Adventure Games Pc, AdventureGamesPc, 
@@ -26,9 +24,9 @@
         Infiltrating The Airship unblocked
         Infiltrating The Airship in the forest temple
         Infiltrating The Airship 6">
-       <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/infiltrating-the-airship.html" />
-	<meta name="publisher" content="FAF Games Team">
+       <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/infiltrating-the-airship.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -309,7 +307,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -762,7 +760,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -808,7 +806,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
